--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -38,7 +38,7 @@ jobs:
           ssh-private-key: ${{ secrets.GH_PAGES_DEPLOY }}
       - name: Release to GitHub Pages
         env:
-          USE_SSH: true
+          GITHUB_TOKEN: ${{ secrets.GH_PAGES_DEPLOY }}
           GIT_USER: git
         run: |
           git config --global user.email "actions@github.com"
